Hide ugly outlines on active input elements. Contrast will be fixed later

--- a/src/Style/Index.scss
+++ b/src/Style/Index.scss
@@ -18,3 +18,4 @@ button, input[type=button] {
   background-color: general.$white;
 }
 
+input:focus, textarea:focus {outline: none;}
